--- a/Grupo 3/css/styles.css
+++ b/Grupo 3/css/styles.css
@@ -78,12 +78,68 @@
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+body {
+  padding-top: 80px; /* Ajusta este valor según la altura de tu navbar */
 }
+
+.book-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+}
+
+  .book-card {
+    width: 200px;
+    height: 400px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background-color: #f9f9f9;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .book-card:hover {
+    transform: translateY(-10px);
+  }
+
+  .book-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+
+  .book-card .book-title {
+    font-weight: bold;
+    margin: 10px 0;
+    font-size: 1.2rem;
+  }
+
+  .book-card .book-description {
+    padding: 0 10px;
+    font-size: 0.9rem;
+    color: #555;
+    margin-bottom: 10px;
+  }
+
+
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
+  .book-link {
+    text-decoration: none;
+    color: inherit;
+  }
+  
 
 @media (prefers-reduced-motion: no-preference) {
   :root {
